KDebug: now entities are supported using the Shape.Entity and also kdebug summon
* added `/kdebug summon <entiy_type> <pos> <nbt> <time> <id>`

All kdebug entities will be discarded when you close a world.